[gd_scene load_steps=6 format=3 uid="uid://bha8ramg7kpui"]

[ext_resource type="Texture2D" uid="uid://dqb7a520xebcs" path="res://assets/brackeys_platformer_assets/sprites/knight.png" id="1_ideak"]
[ext_resource type="Script" uid="uid://7cxgc2squbc2" path="res://scripts/npc_script.gd" id="2_xxcha"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xxcha"]
radius = 3.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kh24r"]
size = Vector2(35, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_abqhh"]
atlas = ExtResource("1_ideak")
region = Rect2(7.44666, 98.6548, 18.7053, 27.3385)

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("2_xxcha")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -4)
shape = SubResource("CapsuleShape2D_xxcha")

[node name="press_to_talk_text" type="RichTextLabel" parent="."]
offset_left = -10.0
offset_top = -48.0
offset_right = 35.0
offset_bottom = -21.0
text = "'e'"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -5)
shape = SubResource("RectangleShape2D_kh24r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -8)
texture = SubResource("AtlasTexture_abqhh")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
